--- a/src/app/shared/bottom-toolbar/bottom-toolbar.component.html
+++ b/src/app/shared/bottom-toolbar/bottom-toolbar.component.html
@@ -7,7 +7,7 @@
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <ion-router-outlet></ion-router-outlet>
+        <ion-router-outlet/>
       </ion-content>
     </div>
   </ion-tab>
@@ -19,7 +19,7 @@
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <div class="example-content">Radio content</div>
+        <ion-router-outlet/>
       </ion-content>
     </div>
   </ion-tab>
