--- a/src/app/shared/bottom-toolbar/bottom-toolbar.component.html
+++ b/src/app/shared/bottom-toolbar/bottom-toolbar.component.html
@@ -7,7 +7,7 @@
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <ion-router-outlet/>
+          <app-home/>
       </ion-content>
     </div>
   </ion-tab>
