--- a/src/app/shared/bottom-toolbar/bottom-toolbar.component.scss
+++ b/src/app/shared/bottom-toolbar/bottom-toolbar.component.scss
@@ -11,7 +11,14 @@
   }
   ion-tab-bar{
     height: 60px;
+    border: none;
   }
   ion-content{
     height: calc(100vh - 105px);
+  }
+  ion-title{
+    background-color: white;
+  }
+  ion-tab-button{
+    background-color: white;
   }
