--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,6 +35,27 @@
     </ion-card-header>
   
     <ion-card-content>
+      <apx-chart
+  [series]="chartOptions.series"
+  [chart]="chartOptions.chart"
+  [xaxis]="chartOptions.xaxis"
+  [yaxis]="chartOptions.yaxis"
+  [dataLabels]="chartOptions.dataLabels"
+  [stroke]="chartOptions.stroke"
+  [grid]="chartOptions.grid"
+  [title]="chartOptions.title"
+></apx-chart>
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Card Title</ion-card-title>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
       Here's a small text description for the card content. Nothing more, nothing less.
     </ion-card-content>
   </ion-card>
